# tauri-plugin-i18n

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  rollup.config.js
guest-js/: composable.ts  index.ts  package.json
permissions/autogenerated/: reference.md
src/: lib.rs  models.rs
