[package]
name = "tauri-plugin-i18n-vsk"
version = "2.0.2"
authors = ["Rohit Singh <razein@wizql.com>", "Joaquin (Pato) Decima <jdecima@vasak.net.ar>"]
description = "Internationalization plugin using rust_i18n for tauri apps."
edition = "2021"
rust-version = "1.77.2"
repository = "https://github.com/VasakOS/tauri-plugin-i18n"
license = "GPL-3.0-only"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-i18n"


[dependencies]
tauri = { version = "2" }
serde = "1.0"
thiserror = "2"
normpath = "1.3.0"
serde_yaml = "0.9"
toml = "0.9"
serde_json = "1"
globwalk = "0.9"


[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
